Tidy up for code review