@@ -1,14 +1,14 @@
 package com.casper.sdk.service.serialization.types;
 
+import com.casper.sdk.service.serialization.cltypes.TypesFactory;
+import com.casper.sdk.service.serialization.util.ByteUtils;
+import com.casper.sdk.service.serialization.util.CollectionUtils;
 import com.casper.sdk.types.CLByteArrayInfo;
 import com.casper.sdk.types.CLType;
 import com.casper.sdk.types.CLValue;
 import com.casper.sdk.types.DeployNamedArg;
-import com.casper.sdk.service.serialization.cltypes.TypesFactory;
-import com.casper.sdk.service.serialization.util.ByteUtils;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static com.casper.sdk.service.serialization.util.ByteUtils.concat;
@@ -115,7 +115,7 @@ class DeployNamedArgByteSerializerTest {
     @Test
     void namedArgsToBytes() {
 
-        final List<DeployNamedArg> args = Arrays.asList(
+        final List<DeployNamedArg> args = CollectionUtils.List.of(
                 new DeployNamedArg("amount",
                         new CLValue(
                                 ByteUtils.decodeHex("05005550b405"),
